tests/syntax/invalid/semicolon.ama
# <input>:1:4 unexpected token: punct(;)
bah;
